[Run] Runs the compiled jar and prints the output to stdout and stderr